[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/gfx/berry_fem.png" type="Texture" id=1]
[ext_resource path="res://assets/gfx/berry_guy.png" type="Texture" id=2]
[ext_resource path="res://scripts/Title.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 16, 32, 16, 32 )
margin = Rect2( 0, 0, 16, 0 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 16, 32, 16, 32 )
margin = Rect2( 0, 0, 16, 0 )

[node name="Title" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 480.0
margin_bottom = 128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 480.0
margin_bottom = 38.0
alignment = 1

[node name="PlayFem" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 166.0
margin_right = 238.0
margin_bottom = 38.0
text = "Play"
icon = SubResource( 1 )

[node name="PlayGuy" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 242.0
margin_right = 314.0
margin_bottom = 38.0
text = "Play"
icon = SubResource( 2 )

[node name="ExitButton" type="Button" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 480.0
margin_bottom = 62.0
text = "Exit"
